--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -10,6 +10,16 @@
       Race
     {{/vertical-align}}
   </div>
+  <div class="index__activity hrm-control" {{action 'goto' 'hrm-control'}}>
+    {{#vertical-align class="index__activity--text"}}
+      Heart Rate Workout
+    {{/vertical-align}}
+  </div>
+  <div class="index__activity pacing-challenge" {{action 'goto' 'pacing-challenge'}}>
+    {{#vertical-align class="index__activity--text"}}
+      Pacing Challenge
+    {{/vertical-align}}
+  </div>
   <div class="index__activity battleship" {{action 'goto' 'battleship'}}>
     {{#vertical-align class="index__activity--text"}}
       Battleship
