--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,7 @@
 @import './vertical-align.scss';
 @import './index.scss';
 @import './hrm-control.scss';
+@import './pacing-challenge-overlay.scss';
 
 * {
   font-family: sans-serif;
