--- a/app/components/display-race/template.hbs
+++ b/app/components/display-race/template.hbs
@@ -3,9 +3,11 @@
   <div class="display-race__main-holder">
     {{main-map raceState=raceState}}
     <div class="display-race__controls-container">
-      <div class="display-race__rankings-container">
-        {{leader-board raceState=raceState frame=frame}}
-      </div>
+      {{#if overlay}}
+        <div class="display-race__rankings-container">
+          {{component overlay raceState=raceState overlayData=overlayData frame=frame}}
+        </div>
+      {{/if}}
       <div class="display-race__controls-gap"></div>
       <div class="display-race__status-and-map">
         
