--- a/app/styles/hrm-control.scss
+++ b/app/styles/hrm-control.scss
@@ -1,5 +1,44 @@
 .hrm-control {
+  &__super-container {
+    background-color: black;
+  }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    background-color: black;
+  }
+  &__button-row {
+    display: flex;
+    flex-direction: row;
+  }
+  &__data-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid lightgrey;
+  }
+  &__data-key {
+    flex: 0 0 140px;
+    font-size: 24px;
+  }
+  &__data-value {
+    flex: 1 1 0px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: right;
+  }
   &__button {
     @include big-button();
+    flex: 1 1 auto;
+  }
+  &__download {
+    @include big-button();
+    width: 100%;
+    max-width: 100%;
   }
 }
