--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,6 +20,8 @@
 @import './index.scss';
 @import './hrm-control.scss';
 @import './pacing-challenge-overlay.scss';
+@import './pacing-challenge.scss';
+@import './stored-data.scss';
 
 * {
   font-family: sans-serif;
