Starting up the react-native version!

--- a/app/components/stored-data/template.hbs
+++ b/app/components/stored-data/template.hbs
@@ -1,4 +1,5 @@
 <h3 class="stored-data__title">Stored Data</h3>
+<p class="stored-data__subtitle">{{yourmd5}}</p>
 {{#if hasData}}
   {{#each riders as |rider|}}
     <hr>
