--- a/app/styles/tourjs-header.scss
+++ b/app/styles/tourjs-header.scss
@@ -9,12 +9,31 @@
     display: inline-block;
     font-size: 96px;
     text-align: center;
-    margin-bottom: 48px;
     text-decoration: none;
     color: black;
 
     &:visited {
       color: black;
+    }
+  }
+  &__subhead {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 48px;
+  
+    &--item {
+      flex: 1 1 0px;
+      display: flex;
+      flex-direction: column;
+      
+      &-label {
+        font-weight: lighter;
+        font-size: 10px;
+      }
+      &-value {
+        font-weight: bolder;
+        font-size: 14px;
+      }
     }
   }
 }
