--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,6 +22,7 @@
 @import './pacing-challenge-overlay.scss';
 @import './pacing-challenge.scss';
 @import './stored-data.scss';
+@import './kickr-setup.scss';
 
 * {
   font-family: sans-serif;
