--- a/app/styles/create-race-widget.scss
+++ b/app/styles/create-race-widget.scss
@@ -21,5 +21,12 @@
   }
   &__button {
     @include big-button();
+    background-color: rgb(239,239,239);
+    display: block;
+    padding: 4px;
+    border: 1px solid black;
+    &:hover {
+      background-color: lightgrey;
+    }
   }
 }
