--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,7 @@
 @import './pacing-challenge.scss';
 @import './stored-data.scss';
 @import './kickr-setup.scss';
+@import './display-post-race.scss';
 
 * {
   font-family: sans-serif;
