--- a/app/kickr-setup/template.hbs
+++ b/app/kickr-setup/template.hbs
@@ -30,6 +30,7 @@
   <h3>Test your settings below</h3>
 
 
+  <button class="kickr-setup__button" {{action 'setHill' -20}}>-20%</button>
   <button class="kickr-setup__button" {{action 'setHill' -10}}>-10%</button>
   <button class="kickr-setup__button" {{action 'setHill' -8}}>-8%</button>
   <button class="kickr-setup__button" {{action 'setHill' -6}}>-6%</button>
@@ -42,5 +43,6 @@
   <button class="kickr-setup__button" {{action 'setHill' 6}}>6%</button>
   <button class="kickr-setup__button" {{action 'setHill' 8}}>8%</button>
   <button class="kickr-setup__button" {{action 'setHill' 10}}>10%</button>
+  <button class="kickr-setup__button" {{action 'setHill' 20}}>20%</button>
 
 </div>
