Neural-network-trained brains work now!

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,6 +20,7 @@
 @import './stored-data.scss';
 @import './kickr-setup.scss';
 @import './display-post-race.scss';
+@import './ai.scss';
 
 * {
   font-family: sans-serif;
