Checkpoint: everything is looking fantastic

--- a/tourjs-ember/app/components/display-race/template.hbs
+++ b/tourjs-ember/app/components/display-race/template.hbs
@@ -1,7 +1,7 @@
 
 <div class="display-race__content">
   <div class="display-race__main-holder">
-    {{main-map raceState=raceState}}
+    {{main-map raceState=raceState mode=mode}}
     <div class="display-race__controls-container">
       {{#if overlay}}
         <div class="display-race__rankings-container">
