--- a/tourjs-ember/app/pacing-challenge-race/template.hbs
+++ b/tourjs-ember/app/pacing-challenge-race/template.hbs
@@ -1,1 +1,1 @@
-{{display-race raceState=_raceState overlay="pacing-challenge-overlay" overlayData=pacingChallengeData}}
+{{display-race raceState=_raceState overlay="pacing-challenge-overlay" overlayData=pacingChallengeData mode="3d"}}
