--- a/tourjs-ember/app/styles/app.scss
+++ b/tourjs-ember/app/styles/app.scss
@@ -21,6 +21,7 @@
 @import './kickr-setup.scss';
 @import './display-post-race.scss';
 @import './ai.scss';
+@import './no-bluetooth.scss';
 
 * {
   font-family: sans-serif;
