--- a/tourjs-react/src/AppMenu.scss
+++ b/tourjs-react/src/AppMenu.scss
@@ -1,1 +1,8 @@
-@import './App.scss';
+.AppMenu {
+  &__Container {
+    max-width: 480px;
+  
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
