--- a/tourjs-react/src/Components/InlineEdit.scss
+++ b/tourjs-react/src/Components/InlineEdit.scss
@@ -18,7 +18,11 @@
     margin: 2px;
   }
   &__Label {
-    flex: 0 0 64px;
+    padding-top: 5px;
+    padding-right: 5px;
+    text-align:right;
+
+    flex: 0 0 70px;
   }
   &__Display {
     @include FontSettings();
