--- a/tourjs-react/src/Components/UserProfileMini.scss
+++ b/tourjs-react/src/Components/UserProfileMini.scss
@@ -18,6 +18,7 @@
   }
   &__NameHandi {
     flex: 1 1 0px;
+    padding-top: 4px;
     display: flex;
     flex-direction:column;
     text-align: left;
