--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -13,6 +13,7 @@
     height: 100vh;
     width: 100vw;
     flex-direction:column;
+    overflow: hidden;
   }
   &__Canvas {
     width: 100vw;
@@ -24,6 +25,12 @@
     height: 58px;
     background-color: rgba(0,0,0,0.35);
     width: 100%;
+  }
+  &__Status-Container {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    background-color: rgba(0,0,0,0.35);
   }
 }
 
