--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -83,7 +83,8 @@
     margin: 0;
   }
   &__GroupMember {
-    width: 14px;
+    max-width: 14px;
+    max-height: 14px;
     margin-right: -6px;
   }
 }
