--- a/tourjs-react/src/Components/InRaceView.scss
+++ b/tourjs-react/src/Components/InRaceView.scss
@@ -21,7 +21,7 @@
   }
   &__Leaderboard-Container {
     position: absolute;
-    bottom: 0px;
+    bottom: 5vh;
     height: 58px;
     background-color: rgba(0,0,0,0.35);
     width: 100%;
@@ -31,6 +31,21 @@
     top: 0px;
     width: 100%;
     background-color: rgba(0,0,0,0.35);
+  }
+  &__Minimap-Container {
+    position: absolute;
+    bottom: 0px;
+    width: 100vw;
+    height: 10vh;
+  }
+}
+
+
+@media screen and (max-width: 900px) and (orientation:landscape) {
+  .InRaceView {
+    &__Leaderboard-Container {
+      bottom: 10vh;
+    }
   }
 }
 
@@ -98,5 +113,47 @@
     padding-top: 6px;
     margin-left: 10px;
     margin-right: 10px;
+  }
+}
+
+@media screen and (orientation: portrait) {
+  .InRaceView {
+    &__Leaderboard-Container {
+      height: auto;
+    }
+  }
+  .InRaceLeaderboard {
+    &__Container {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+  }
+  .InRaceLeaderboardGroup {
+    &__Container {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+    }
+    &__Leader {
+      display: inline-block;
+      flex: 0 0  33%;
+    }
+    &__Data {
+      flex: 0 0  33%;
+    }
+    &__Who {
+      flex: 0 0  33%;
+    }
+  }
+  .InRaceLeaderboardGap {
+    &__Container {
+      display: block;
+      padding-top: 0px;
+      text-align: center;
+
+      & div {
+        display: inline-block;
+      }
+    }
   }
 }
