Set Race Start time functionality

--- a/tourjs-react/src/Components/PreRaceView.scss
+++ b/tourjs-react/src/Components/PreRaceView.scss
@@ -66,4 +66,11 @@ $card-height: 160px;
   &__MapDetails {
     width: 100%;
   }
+  &__ButtonPile {
+    display: block;
+    & Button {
+      display: inline-block;
+      width: auto;
+    }
+  }
 }
